k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: zack-dev
  name: schelling-model-sim-service
spec:
  selector:
    app: schelling-model-sim
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
