k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: zack-dev
  name: schelling-model-sim-ingress
  annotations:
    cert-manager.io/issuer: azure-issuer
    spec.ingressClassName: nginx
    kubernetes.io/tls-acme: 'true'
    meta.helm.sh/release-name: schelling-model-sim
    meta.helm.sh/release-namespace: zack-dev
spec:
  tls:
    - hosts:
        - zack-dev.dev.iotdev-westpharma.com
        - '*.zack-dev.dev.iotdev-westpharma.com'
      secretName: https-tls
  rules:
  - host: zack-dev.dev.iotdev-westpharma.com
    http:
      paths:
      - path: /schelling-model-sim
        pathType: Prefix
        backend:
          service:
            name: schelling-model-sim-service
            port:
              number: 80
